# router/user.go
@@ -2,6 +2,6 @@ package router
 
 import "github.com/gofiber/fiber/v2"
 
-func (StargazerRouter) GetUserInfo(ctx *fiber.Ctx) error {
+func (StargazerRouter) GetUserProfile(ctx *fiber.Ctx) error {
 	return ctx.SendString("Pong!")
 }
